# CHANGELOG
# ---
# * Use test? query for checking test mode [cody]
#
# * Add support for the E-xact Payment Gateway [James Edward Gray II, cody]
#
# * Fix partially broken method of dealing with phone numbers in the PayPal Helper [cody]
#
# * Update remote tests for PaymentExpress [cody]
#
# * Add Content-Type header to PaymentExpress post [cody]
#
# * Use DECLINED as the message for declined transactions in the PaymentExpress remote tests [cody]
#
# * Add JCB as a supported card type for the PaymentExpressGateway [cody]
#
# * Rename DpsGateway to PaymentExpressGateway [cody]
#
# * Add DPS Payment Express gateway (NZ) [dgjones, cody]
#
# * Remove duplicate and incorrect expdate method from Authorize.net [cody]
#
# * Allow authorization and purchase using a billing_id retrieved from TrustCommerce citadel [jesse.c.scott]
#
# * Don't return a frozen string from CreditCard.type? [cody]
#
# * Update remote Psigate test to ensure using a verification value doesn't break anything [cody]
#
# * Update remote Moneris test to ensure using a verification value doesn't break anything [cody]
#
# * Fix Solo issue number with CardStream gateway and improve test coverage [cody]
#
# * Add CardStream gateway [Jonah Fox, Thomas Nichols, cody]
#
# * Verify Peer in PayPal notifications and add account method [cody]
# 
# * Mark 1.1.0 release 
#
# * Add unique_id option to PayPal mass payments [Haig]
#
# * Fix expiry date in USA ePay [cody]
#
# * Fix PayPal Payments Pro UK with Switch & Solo cards [cody]
#
# * Add reauthorization to PaypalGateway and PaypalExpressGateway [dorrenchen]
#
# * Update DataCash tests and format merchant reference number to meet DataCash's requirements [MoneySpyder, cody]
#
# * Add Datacash gateway [MoneySpyder, cody]
#
# * VERIFY_PEER on all SSL requests [cody]
#
# * Add support for 2Checkout [cody] 
#
# * Add support for PayPal mass payments to the PaypalGateway and the PaypalExpressGateway [Brandon Keepers]
#
# * Add a credit method to Authorize.net [cody]
#